--- a/public/css/monStyle.css
+++ b/public/css/monStyle.css
@@ -9,6 +9,10 @@
     transition: 0.5s;
  }
 
+ /*************************************************************** 
+ Cette partie concerne le login et le register de Waxtaan
+ ****************************************************************/
+
  section{
      position: relative;
      min-height: 100vh;
@@ -153,4 +157,84 @@ section .container.active .singinBx .imgBx {
         width: 100%;
     }
     
+}
+
+ /*************************************************************** 
+ Cette partie concerne le salon de chat de Waxtaan
+ ****************************************************************/
+
+.d-flex{
+    display: flex !important;
+}
+
+section .container .sidebar {
+    width: 25%;
+    background: #725688;
+    height: 100%;
+}
+section .container .chatContainer {
+    width: 75%;
+    background: #ffffff;
+    height: 100%;
+}
+section .container .chatContainer .headerChat {
+    padding: 10px;
+    width: 100%;
+    height: 80px;
+    background: white;
+    display: flex;
+    align-items: center;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    z-index: 1;
+}
+section .container .chatContainer .mainChatContainer {
+    padding: 20px;
+    width: 100%;
+    overflow: scroll;
+}
+section .container .chatContainer .mainChatContainer .messageConatainer{
+    padding: 20px;
+    width: 100%;
+    min-height: 70px;
+    display: flex;
+    margin: 10px 0;
+}
+
+section .mainChatContainer .messageConatainer .heure{
+    width: 10%;
+    display: flex;
+    align-items: center;
+    margin-right: 15px;
+}
+section .mainChatContainer .messageConatainer .heure.sent{
+    margin-left: 15px;
+}
+
+section .mainChatContainer .messageConatainer .message{
+    padding: 20px;
+    width: 100%;
+    min-height: 70px;
+    display: flex;
+    align-items: center;
+    background-color: #725688;
+    border-radius: 15px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    color: white;
+}
+section .mainChatContainer .messageConatainer .message.sent{
+    background-color: white;
+    color: #725688;
+}
+
+section .mainChatContainer .messageConatainer .message .photoContainer{
+    width: 70px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+}
+
+section .messageConatainer .message .photoContainer img{
+    width: 100%;
+    height: 100%;
 }
