--- a/public/css/monStyle.css
+++ b/public/css/monStyle.css
@@ -24,8 +24,8 @@
 }
 section .container{
     position: relative;
-    width: 800px;
-    height: 500px;
+    width: 65%;
+    height: 85vh;
     background-color: white;
     box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
@@ -173,6 +173,7 @@ section .container .sidebar {
     height: 100%;
 }
 section .container .chatContainer {
+    position: relative;
     width: 75%;
     background: #ffffff;
     height: 100%;
@@ -190,7 +191,7 @@ section .container .chatContainer .headerChat {
 section .container .chatContainer .mainChatContainer {
     padding: 20px;
     width: 100%;
-    height: 90%;
+    height: calc(90% - 80px);
     overflow: scroll;
 }
 section .container .chatContainer .mainChatContainer .messageConatainer{
@@ -238,4 +239,40 @@ section .mainChatContainer .messageConatainer .message .photoContainer{
 section .messageConatainer .message .photoContainer img{
     width: 100%;
     height: 100%;
+}
+
+.input_containter{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 10px ;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 80px;
+    background: white;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.input_text{
+    width: 85%;
+    height: 50px;
+    background: rgb(228, 228, 228);
+    border: none;
+    border-radius: 20px;
+    outline: none;
+    resize: none;
+    overflow: hidden !important;
+}
+
+.input_text:focus-within{
+    outline: none !important;
+    border: none !important;
+}
+
+.input_containter button {
+    background-color: #725688;
+    color: white;
+    padding: 12px 20px;
+    border-radius: 20px;
 }
